--- a/CashBookApp.WinForm/Properties/Resources.resx
+++ b/CashBookApp.WinForm/Properties/Resources.resx
@@ -181,4 +181,7 @@
   <data name="sales-list" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\sales-list1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="_return" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\return.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
